@@ -7,6 +7,13 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/06/30 v61 : </lime>
+</p><br/>
+<p>
+    1. "隐藏公共冷却" 选项已被加入动作条系统。
+</p>
+<br/><br/>
+<p>
 <lime>2016/06/29 v60 : </lime>
 </p><br/>
 <p>
@@ -373,3 +380,5 @@ L["Enable the feature would require reload, \ndo you continue?"] = "启用此功
 
 L["Aura Size : "] = "增/减益图标大小 : "
 L["Please input the aura's size(px)"] = "请输入增/减益图标大小(像素)"
+
+L["Hide Global cooldown"] = "隐藏公共冷却"
